--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/ws": "^8.18.1",
     "express": "^5.1.0",
     "pm2": "^6.0.13",
+    "tsc": "^2.0.4",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.20.6"
   },
