--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     build: .
     # image: ghcr.io/reyhaonan/ellty-server:main
     container_name: number-comm-api
+    restart: always
     environment:
       DATABASE_URL: postgresql://${DB_USER}:${DB_PASS}@db:5432/${DB_NAME}
       PORT: ${PORT}
