chore: change handling

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "db:migrate": "drizzle-kit migrate",
     "db:seed": "tsx src/utils/seed.ts",
     "dev": "tsx watch src/index.ts",
-    "build": "tsc & tsc-alias"
+    "build": "tsc && tsc-alias"
   },
   "tsx": {
     "tsconfig": "./tsconfig.json"
@@ -26,7 +26,8 @@
     "express": "^5.1.0",
     "tsc": "^2.0.4",
     "tsc-alias": "^1.8.16",
-    "tsx": "^4.20.6"
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -36,7 +37,6 @@
     "drizzle-orm": "^0.44.7",
     "express-session": "^1.18.2",
     "pg": "^8.16.3",
-    "typescript": "^5.9.3",
     "ws": "^8.18.3",
     "zod": "^4.1.13"
   }
